crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__invalid_assignments__tests__ok_assignment_expr.snap
---
source: crates/ruff_python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..8,
                value: NamedExpr(
                    ExprNamedExpr {
                        range: 1..7,
                        target: Name(
                            ExprName {
                                range: 1..2,
                                id: "x",
                                ctx: Store,
                            },
                        ),
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                range: 6..7,
                                value: Int(
                                    5,
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
