crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__invalid_assignments__tests__ok_ipy_escape_command.snap
---
source: crates/ruff_python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
Ok(
    Module(
        ModModule {
            range: 0..9,
            body: [
                IpyEscapeCommand(
                    StmtIpyEscapeCommand {
                        range: 0..9,
                        kind: Shell,
                        value: "foo = 42",
                    },
                ),
            ],
        },
    ),
)
