crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__invalid_assignments__tests__ok_name.snap
---
source: crates/ruff_python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
Ok(
    [
        Assign(
            StmtAssign {
                range: 0..8,
                targets: [
                    Name(
                        ExprName {
                            range: 0..3,
                            id: "foo",
                            ctx: Store,
                        },
                    ),
                ],
                value: NumberLiteral(
                    ExprNumberLiteral {
                        range: 6..8,
                        value: Int(
                            42,
                        ),
                    },
                ),
            },
        ),
    ],
)
