crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__invalid_assignments__tests__ok_subscript_weird.snap
---
source: crates/ruff_python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
Ok(
    [
        Assign(
            StmtAssign {
                range: 0..9,
                targets: [
                    Subscript(
                        ExprSubscript {
                            range: 0..4,
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 0..1,
                                    value: Int(
                                        5,
                                    ),
                                },
                            ),
                            slice: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 2..3,
                                    value: Int(
                                        0,
                                    ),
                                },
                            ),
                            ctx: Store,
                        },
                    ),
                ],
                value: NumberLiteral(
                    ExprNumberLiteral {
                        range: 7..9,
                        value: Int(
                            42,
                        ),
                    },
                ),
            },
        ),
    ],
)
